# yt

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md
.github/workflows/: ci.yml
.paul/: PROJECT.md  ROADMAP.md  STATE.md  paul.json
.paul/phases/01-title-capture/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/02-claude-summarization/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/03-progress-ui/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/04-capacities-upload/: 04-01-PLAN.md  04-01-SUMMARY.md  CONTEXT.md
docs/superpowers/specs/: 2026-07-13-yt-rust-port-design.md
src/: main.rs
