[package]
name = "yt"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/DigitalDevBlog/yt"
description = "YouTube transcript, duration and comments CLI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
html-escape = "0.2"
indicatif = "0.17"
quick-xml = "0.37"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
